@@ -178,6 +178,7 @@
           </annotationProcessorPaths>
           <fork>true</fork>
           <compilerArgs>
+            <arg>--enable-preview</arg>
             <arg>-XDcompilePolicy=simple</arg>
             <arg>--should-stop=ifError=FLOW</arg>
             <!-- @formatter:off -->
@@ -197,6 +198,13 @@
         </configuration>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>--enable-preview</argLine>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>io.github.git-commit-id</groupId>
         <artifactId>git-commit-id-maven-plugin</artifactId>
       </plugin>
@@ -204,8 +212,7 @@
         <groupId>org.graalvm.buildtools</groupId>
         <artifactId>native-maven-plugin</artifactId>
         <configuration>
-          <!-- https://github.com/oracle/graalvm-reachability-metadata/issues/697 -->
-          <buildArgs>-H:Preserve=package=tools.jackson.*</buildArgs>
+          <buildArgs>--enable-preview</buildArgs>
         </configuration>
       </plugin>
       <plugin>
@@ -215,6 +222,8 @@
           <execution>
             <id>process-aot</id>
             <configuration>
+              <jvmArguments>--enable-preview</jvmArguments>
+              <compilerArguments>--enable-preview</compilerArguments>
               <systemPropertyVariables>
                 <management.opentelemetry.tracing.export.otlp.endpoint>
                   http://otel-collector.opentelemetry.svc.cluster.local:4318/v1/traces
@@ -247,9 +256,7 @@
             <env>
               <BP_OCI_SOURCE>https://github.com/${env.GITHUB_REPOSITORY}</BP_OCI_SOURCE>
               <BP_OCI_REVISION>${env.GITHUB_SHA}</BP_OCI_REVISION>
-              <!-- https://github.com/oracle/graalvm-reachability-metadata/issues/697 -->
-              <BP_NATIVE_IMAGE_BUILD_ARGUMENTS>-H:Preserve=package=tools.jackson.*
-              </BP_NATIVE_IMAGE_BUILD_ARGUMENTS>
+              <BP_NATIVE_IMAGE_BUILD_ARGUMENTS>--enable-preview</BP_NATIVE_IMAGE_BUILD_ARGUMENTS>
             </env>
             <buildpacks>
               <buildpack>docker.io/paketobuildpacks/oracle</buildpack>
